IRL 1 Demo is working robustly now

--- a/PointMass_IRL_Crocoddyl.ipynb
+++ b/PointMass_IRL_Crocoddyl.ipynb
@@ -10,19 +10,59 @@
     "import crocoddyl\n",
     "import pinocchio\n",
     "from IPython.display import HTML\n",
-    "import mim_solvers\n",
+    "from mim_solvers import SolverSQP\n",
     "import numpy as np\n",
     "import random\n",
     "import pinocchio as pin\n",
     "from matplotlib import animation\n",
     "from matplotlib import pyplot as plt\n",
     "from PointMass_utils import *\n",
-    "from PointMass_model import DifferentialActionModelPointMass"
+    "# from PointMass_model import DifferentialActionModelPointMass\n",
+    "# from pinocchio.robot_wrapper import RobotWrapper\n",
+    "# from robot_descriptions.loaders.pinocchio import load_robot_description"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "87b1055b-3ab9-4729-9032-c0b7da3e472b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pm = RobotWrapper.BuildFromURDF('PM_model.urdf', None, pin.JointModelFreeFlyer())\n",
+    "# pm_model = pm.model\n",
+    "# pm_data = pm.data\n",
+    "# pm_model.gravity = pin.Motion.Zero()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa24b27d-0b69-4044-b68c-a35c0d81de89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pm_model.effortLimit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3fda4601-777d-4918-89ed-c17f15172a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# q_rand = pin.randomConfiguration(pm_model)\n",
+    "# print(q_rand)\n",
+    "# pin.forwardKinematics(pm_model, pm_data, q_rand, np.zeros(2))\n",
+    "# pin.framesForwardKinematics(pm_model, pm_data, q_rand)\n",
+    "# pin.updateFramePlacements(pm_model, pm_data)  \n",
+    "# print(pm_model.jointPlacements.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0f2871df-83f7-41a8-9a3f-c5d674b11be4",
    "metadata": {},
    "outputs": [],
@@ -38,12 +78,13 @@
     "obs1 = Obstacle(3.5, 3.5, 1, 'Obs1')\n",
     "obs2 = Obstacle(6.5, 6.5, 1, 'Obs2')\n",
     "obs3 = Obstacle(6.5, 3.5, 1, 'Obs3')\n",
-    "obs_set = [obs1, obs2, obs3]"
+    "obs_set = [obs1, obs2, obs3]\n",
+    "# obs_set = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6641af20-114f-4073-a047-4565ffaedf08",
    "metadata": {},
    "outputs": [],
@@ -82,13 +123,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c8eb396a-78d7-4eca-9b6d-aa2cb46c63dc",
+   "execution_count": 7,
+   "id": "9ea40f9b-7373-4b59-bf1b-43951c29232e",
    "metadata": {},
    "outputs": [],
    "source": [
     "pm_model = pin.buildModelFromUrdf('PM_model.urdf')\n",
+    "pm_model.gravity = pin.Motion.Zero()\n",
     "pm_data = pm_model.createData()\n",
+    "q_rand = pin.randomConfiguration(pm_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cce1fa26-d2c8-4efa-aee9-4d86d4b11bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SE3(array([[1., 0., 0., 0.],[0., 1., 0., 0.],[0., 0., 1., 0.],[0., 0., 0., 1.]])),\n",
+       " SE3(array([[1., 0., 0., 0.],[0., 1., 0., 0.],[0., 0., 1., 0.],[0., 0., 0., 1.]])),\n",
+       " SE3(array([[1., 0., 0., 0.],[0., 1., 0., 0.],[0., 0., 1., 0.],[0., 0., 0., 1.]]))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm_model.jointPlacements.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "64cf1070-45c9-4ad1-86ef-94bd5b9152e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(q_rand)\n",
+    "# pin.forwardKinematics(pm_model, pm_data, q_rand, np.zeros(nq))\n",
+    "# pin.framesForwardKinematics(pm_model, pm_data, q_rand)\n",
+    "# pin.updateFramePlacements(pm_model, pm_data)  \n",
+    "# pm_model.jointPlacements.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9be87440-65af-4c04-8b22-6bce6c15ef9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pin.computeJointJacobians(pm_model, pm_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c8eb396a-78d7-4eca-9b6d-aa2cb46c63dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nq = pm_model.nq; nv = nq\n",
     "nu = 2; nx = nq + nv\n",
     "# state = crocoddyl.StateVector(nx)\n",
@@ -115,16 +214,17 @@
     "\n",
     "# Obstacles\n",
     "collisionCost = []\n",
-    "for obs in obs_set:\n",
+    "collisionData = []\n",
+    "for i, obs in enumerate(obs_set):\n",
     "    collisionActivation = ActivationModel2NormCustom(state, obs.R, nr = 4)\n",
     "    collisionResidual = crocoddyl.ResidualModelState(state, np.array([obs.x, obs.y, 0.0, 0.0]))\n",
     "    collisionCost.append(crocoddyl.CostModelResidual(state, collisionActivation, collisionResidual))\n",
-    "\n"
+    "    collisionData.append(collisionCost[i].createData(stateDataCollector))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "d0d7adc1-6bb4-40d0-aa27-c96bbd1de625",
    "metadata": {},
    "outputs": [],
@@ -141,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "50c68b8c-e43a-4e89-9db1-68bfcb95ee83",
    "metadata": {},
    "outputs": [],
@@ -159,7 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "id": "24263af3-c065-4f87-80dd-90e02b896910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumDiff Differential Analytical Model\n",
+    "# running_DAM = crocoddyl.DifferentialActionModelNumDiff(runningCostModel, False)\n",
+    "# terminal_DAM = crocoddyl.DifferentialActionModelNumDiff(terminalCostModel, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "12a19c91-f4a9-4e0d-88de-c69845bb755d",
    "metadata": {},
    "outputs": [],
@@ -171,7 +283,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "id": "2de6f06f-e33f-4ad5-a6ac-cda73a66e4e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# running_DAM.costs.costs['obs1'].cost.activation.alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5bb5cd06-7c53-4f01-b0ba-eb54766e3a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'UReg': {w=0.0001, CostModelResidual {ResidualModelControl, ActivationModelQuad {nr=2}}},\n",
+       " 'XReg': {w=0.1, CostModelResidual {ResidualModelState, ActivationModelQuad {nr=4}}},\n",
+       " 'obs0': {w=0.1, CostModelResidual {ResidualModelState, crocoddyl::python::ActivationModelAbstract_wrap}},\n",
+       " 'obs1': {w=0.1, CostModelResidual {ResidualModelState, crocoddyl::python::ActivationModelAbstract_wrap}},\n",
+       " 'obs2': {w=0.1, CostModelResidual {ResidualModelState, crocoddyl::python::ActivationModelAbstract_wrap}},\n",
+       " 'translation': {w=10, CostModelResidual {ResidualModelState, ActivationModelQuad {nr=4}}}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "running_DAM.costs.costs.todict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "1c1f940e-f53a-4188-b96a-b5dfcf1276ce",
    "metadata": {},
    "outputs": [],
@@ -183,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "8b46235f-e924-4f4c-b2a6-20a8fafb9c99",
    "metadata": {},
    "outputs": [],
@@ -191,8 +339,9 @@
     "x0 = np.zeros(state.nx)\n",
     "u0 = np.zeros(actuation.nu)\n",
     "problem = crocoddyl.ShootingProblem(x0, [runningModel] * T, terminalModel)\n",
-    "solver = mim_solvers.SolverSQP(problem)\n",
-    "solver.setCallbacks([crocoddyl.CallbackLogger(), crocoddyl.CallbackVerbose()])\n",
+    "sqp_opt = SolverSQP(problem)\n",
+    "sqp_opt.solve\n",
+    "# solver.setCallbacks([crocoddyl.CallbackLogger(), crocoddyl.CallbackVerbose()])\n",
     "# Warm start : initial state + gravity compensation\n",
     "xs_init = [x0 for i in range(T+1)]\n",
     "us_init = [u0 for i in range(T)]"
@@ -200,8 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "41cf64a2-e724-461c-9050-c962de57ef89",
+   "execution_count": null,
+   "id": "5d167bb3-cba8-46b5-be9c-f84aa4e79bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7f81fa45-8a98-4b03-b8cc-5d1a097ba044",
    "metadata": {},
    "outputs": [
     {
@@ -211,26 +370,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m solver\u001b[38;5;241m.\u001b[39mtermination_tolerance \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-4\u001b[39m\n\u001b[1;32m      2\u001b[0m solver\u001b[38;5;241m.\u001b[39mwith_callbacks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43msolver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxs_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mus_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m solver\u001b[38;5;241m.\u001b[39mwith_callbacks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msqp_opt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
      ]
     }
    ],
    "source": [
-    "solver.termination_tolerance = 1e-4\n",
-    "solver.with_callbacks = True\n",
-    "solver.solve(xs_init, us_init, 100)\n",
-    "solver.with_callbacks = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "909cc21c-aacb-4c05-8418-8c202e58fad3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solver.solve"
+    "sqp_opt.solve()"
    ]
   }
  ],
