added the AutoReg variations, updated utils

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -355,24 +355,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "845ce0e3-9460-4efa-aeb2-647b39b12161",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 5 5 9 6]\n",
+      "[9 6 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(0, 10, 5)\n",
+    "print(A)\n",
+    "inds = sorted(range(len(A)), key=lambda i: A[i])[-3:][::-1]\n",
+    "print(A[inds])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "af95402e-e35c-46c4-bb0e-b4c479d694b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.9999999999999996"
+       "[3, 0]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.det(A)"
+    "sorted(range(len(A)), key=lambda i: A[i])[-2:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a715767-5a7e-416f-ae4a-2a072526f5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
